@@ -68,6 +68,8 @@ Send a response for each received event.
 
 Then the string "ok" is send back to the sender.
 
+See also the documentation of Awesant::Output::Socket.
+
 =head1 METHODS
 
 =head2 new
